; ModuleID = '/home/carl/AnghaBench/freebsd/cddl/contrib/opensolaris/lib/libzfs_core/common/extr_libzfs_core.c_lzc_initialize.c'
source_filename = "/home/carl/AnghaBench/freebsd/cddl/contrib/opensolaris/lib/libzfs_core/common/extr_libzfs_core.c_lzc_initialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZPOOL_INITIALIZE_COMMAND = common dso_local global i32 0, align 4
@ZPOOL_INITIALIZE_VDEVS = common dso_local global i32 0, align 4
@ZFS_IOC_POOL_INITIALIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lzc_initialize(i8* %0, i64 %1, i32* %2, i32** %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32**, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  store i32** %3, i32*** %8, align 8
  %11 = call i32* (...) @fnvlist_alloc()
  store i32* %11, i32** %10, align 8
  %12 = load i32*, i32** %10, align 8
  %13 = load i32, i32* @ZPOOL_INITIALIZE_COMMAND, align 4
  %14 = load i64, i64* %6, align 8
  %15 = trunc i64 %14 to i32
  %16 = call i32 @fnvlist_add_uint64(i32* %12, i32 %13, i32 %15)
  %17 = load i32*, i32** %10, align 8
  %18 = load i32, i32* @ZPOOL_INITIALIZE_VDEVS, align 4
  %19 = load i32*, i32** %7, align 8
  %20 = call i32 @fnvlist_add_nvlist(i32* %17, i32 %18, i32* %19)
  %21 = load i32, i32* @ZFS_IOC_POOL_INITIALIZE, align 4
  %22 = load i8*, i8** %5, align 8
  %23 = load i32*, i32** %10, align 8
  %24 = load i32**, i32*** %8, align 8
  %25 = call i32 @lzc_ioctl(i32 %21, i8* %22, i32* %23, i32** %24)
  store i32 %25, i32* %9, align 4
  %26 = load i32*, i32** %10, align 8
  %27 = call i32 @fnvlist_free(i32* %26)
  %28 = load i32, i32* %9, align 4
  ret i32 %28
}

declare dso_local i32* @fnvlist_alloc(...) #1

declare dso_local i32 @fnvlist_add_uint64(i32*, i32, i32) #1

declare dso_local i32 @fnvlist_add_nvlist(i32*, i32, i32*) #1

declare dso_local i32 @lzc_ioctl(i32, i8*, i32*, i32**) #1

declare dso_local i32 @fnvlist_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
